...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lin_btn_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/raz_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/btn_1_background"
                        android:padding="8dp"
                        android:text="@string/raz_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/my_white" />

                    <Button
                        android:id="@+id/help_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/btn_3_background"
                        android:padding="8dp"
                        android:text="@string/help_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/my_white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_btn_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/new_game_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/btn_2_background"
                        android:padding="8dp"
                        android:text="@string/new_game_btn_label"
...
